Deep rewrite Shenandoah GC document based on source (274 → 1226 lines)
- Fixed: removed incorrect Brooks Pointer references (mark word
  forwarding since JDK 14)
- Region states: verbatim enum from shenandoahHeapRegion.hpp
- Forwarding pointer: mark word encoding from shenandoahForwarding
- Barriers: LRB, SATB, Card barrier from shenandoahBarrierSet
- GC cycle: all 12 phases from shenandoahConcurrentGC.cpp::collect()
- GC modes: SATB/Generational/Passive from mode/ directory
- Heuristics: Adaptive/Static/Compact/Aggressive hierarchy
- Generational Shenandoah (JEP 404/521): generations, promotion
- Degenerated/Full GC upgrade chain from ShenandoahDegenPoint
- All tuning parameters from shenandoah_globals.hpp
- vs G1 vs ZGC comparison table
- Source navigation: 20-entry file mapping

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>